# django-crud

./: README.md  pyproject.toml
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks_crud_project/: settings.py
templates/: base.html  navbar.html  snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
